# g2BeiDou.Capture

./: .gitignore  CMakeLists.txt  readme.md
3rdpart/opencv/x64/vc17/staticlib/: OpenCVConfig.cmake  OpenCVModules-debug.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake  ippiw.lib  ippiwd.lib  ittnotify.lib  ittnotifyd.lib  libopenjp2.lib  libopenjp2d.lib  zlib.lib  zlibd.lib
g2BeiDou.Capture/: CMakeLists.txt
g2BeiDou.Capture.Test/: CMakeLists.txt  Capture.Test.cpp  catch2.hpp
g2BeiDou.Capture/include/: g2BeiDou.Capture.hpp
g2BeiDou.Capture/src/: Capture.cpp  Capture.h  g2BeiDou.Capture.cpp
g2BeiDou.Capture/src/BaseCapture/: BaseCapture.cpp  BaseCapture.h  BaseCapture.include.h
g2BeiDou.Capture/src/logger/: grror.cpp  grror.h
g2BeiDou.Capture/src/video/: VideoCapture.cpp  VideoCapture.h
g2BeiDou.Capture/src/window/: DirectShowCapture.cpp  DirectShowCapture.h  WindowHandleCapture.cpp  WindowHandleCapture.h
lib/: g2BeiDou.Capture.lib
